[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "5 mini games for an educational project"
authors = ["Nikolai Loginov <Loginton@gmail.com>"]
repository = "https://github.com/NikolaiLoginov/python-project-49.git"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Framework :: Flake8"

  ]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"